--- a/views/proses.html
+++ b/views/proses.html
@@ -200,7 +200,7 @@
     </div>
     <div class="container">
         <div class="box">
-            <img src="Images/Mobil.jpg" alt="Gambar 4">
+            <img src="Images/Kamar 2.jpg" alt="Gambar 4">
             <div class="overlay">
                 <input type="checkbox" id="toggle_checkbox_4">
                 <label for="toggle_checkbox_4">
