--- a/views/proses.html
+++ b/views/proses.html
@@ -312,9 +312,9 @@
           break;
           case 'toggle_checkbox_7':
           if (checkbox.checked) {
-            sendCommand("11");
+            sendCommand('11');
           } else {
-            sendCommand("12");
+            sendCommand('12');
           }
           break;
          default:
