--- a/views/proses.html
+++ b/views/proses.html
@@ -276,45 +276,45 @@
       switch (checkboxId) {
         case 'toggle_checkbox_1':
           if (checkbox.checked) {
-            sendCommand('1');
+            sendCommand('a');
             console.log(new Date()) // Nyalakan lampu 1
           } else {
-            sendCommand('2');
+            sendCommand('b');
           }
           break;
         case 'toggle_checkbox_2':
           if (checkbox.checked) {
-            sendCommand('3'); // Nyalakan lampu 2
+            sendCommand('c'); // Nyalakan lampu 2
           } else {
-            sendCommand('4'); // Matikan lampu 2
+            sendCommand('d'); // Matikan lampu 2
           }
           break;
         case 'toggle_checkbox_4':
           if (checkbox.checked) {
-            sendCommand('5'); // Nyalakan lampu 3
+            sendCommand('e'); // Nyalakan lampu 3
           } else {
-            sendCommand('6'); // Matikan lampu 3
+            sendCommand('f'); // Matikan lampu 3
           }
           break;
           case 'toggle_checkbox_5':
           if (checkbox.checked) {
-            sendCommand('7');
+            sendCommand('g');
           } else {
-            sendCommand('8');
+            sendCommand('h');
           }
           break;
           case 'toggle_checkbox_6':
           if (checkbox.checked) {
-            sendCommand('9');
+            sendCommand('i');
           } else {
-            sendCommand('10');
+            sendCommand('j');
           }
           break;
           case 'toggle_checkbox_7':
           if (checkbox.checked) {
-            sendCommand('11');
+            sendCommand('k');
           } else {
-            sendCommand('12');
+            sendCommand('l');
           }
           break;
          default:
