--- a/views/proses.html
+++ b/views/proses.html
@@ -276,45 +276,45 @@
       switch (checkboxId) {
         case 'toggle_checkbox_1':
           if (checkbox.checked) {
-            sendCommand('a');
+            sendCommand('1');
             console.log(new Date()) // Nyalakan lampu 1
           } else {
-            sendCommand('b');
+            sendCommand('2');
           }
           break;
         case 'toggle_checkbox_2':
           if (checkbox.checked) {
-            sendCommand('c'); // Nyalakan lampu 2
+            sendCommand('3'); // Nyalakan lampu 2
           } else {
-            sendCommand('d'); // Matikan lampu 2
+            sendCommand('4'); // Matikan lampu 2
           }
           break;
         case 'toggle_checkbox_4':
           if (checkbox.checked) {
-            sendCommand('e'); // Nyalakan lampu 3
+            sendCommand('5'); // Nyalakan lampu 3
           } else {
-            sendCommand('f'); // Matikan lampu 3
+            sendCommand('6'); // Matikan lampu 3
           }
           break;
           case 'toggle_checkbox_5':
           if (checkbox.checked) {
-            sendCommand('g');
+            sendCommand('7');
           } else {
-            sendCommand('h');
+            sendCommand('8');
           }
           break;
           case 'toggle_checkbox_6':
           if (checkbox.checked) {
-            sendCommand('i');
+            sendCommand('9');
           } else {
-            sendCommand('j');
+            sendCommand('10');
           }
           break;
           case 'toggle_checkbox_7':
           if (checkbox.checked) {
-            sendCommand('k');
+            sendCommand('11');
           } else {
-            sendCommand('l');
+            sendCommand('12');
           }
           break;
          default:
