--- a/views/proses.html
+++ b/views/proses.html
@@ -187,14 +187,7 @@
         </div>
         <div class="box">
             <div class="overlay">
-                <input type="checkbox" id="toggle_checkbox_3">
-                <label for="toggle_checkbox_3" >
-                    <div id="star" >
-                        <div class="star" id="star-1">★</div>
-                        <div class="star" id="star-2">★</div>
-                    </div>
-                    <div id="moon" ></div>
-                </label>
+    
             </div>
         </div>
     </div>
@@ -307,14 +300,14 @@
           if (checkbox.checked) {
             sendCommand('9');
           } else {
-            sendCommand('10');
+            sendCommand('A');
           }
           break;
           case 'toggle_checkbox_7':
           if (checkbox.checked) {
-            sendCommand('11');
+            sendCommand('B');
           } else {
-            sendCommand('12');
+            sendCommand('C');
           }
           break;
          default:
