--- a/views/proses.html
+++ b/views/proses.html
@@ -269,36 +269,36 @@
       switch (checkboxId) {
         case 'toggle_checkbox_1':
           if (checkbox.checked) {
-            sendCommand('1');
+            sendCommand("1");
             console.log(new Date()) // Nyalakan lampu 1
           } else {
-            sendCommand('2');
+            sendCommand("2");
           }
           break;
         case 'toggle_checkbox_2':
           if (checkbox.checked) {
-            sendCommand('3'); // Nyalakan lampu 2
+            sendCommand("3"); // Nyalakan lampu 2
           } else {
-            sendCommand('4'); // Matikan lampu 2
+            sendCommand("4"); // Matikan lampu 2
           }
           break;
         case 'toggle_checkbox_4':
           if (checkbox.checked) {
-            sendCommand('5'); // Nyalakan lampu 3
+            sendCommand("5"); // Nyalakan lampu 3
           } else {
-            sendCommand('6'); // Matikan lampu 3
+            sendCommand("6"); // Matikan lampu 3
           }
           break;
           case 'toggle_checkbox_5':
           if (checkbox.checked) {
-            sendCommand('7');
+            sendCommand("7");
           } else {
-            sendCommand('8');
+            sendCommand("8");
           }
           break;
           case 'toggle_checkbox_6':
           if (checkbox.checked) {
-            sendCommand('9');
+            sendCommand("9");
           } else {
             sendCommand("10");
           }
