--- a/views/proses.html
+++ b/views/proses.html
@@ -300,14 +300,14 @@
           if (checkbox.checked) {
             sendCommand('9');
           } else {
-            sendCommand("10");
+            sendCommand('A');
           }
           break;
           case 'toggle_checkbox_7':
           if (checkbox.checked) {
-            sendCommand("11");
+            sendCommand('B');
           } else {
-            sendCommand("12");
+            sendCommand('Cbacks');
           }
           break;
          default:
