--- a/views/proses.html
+++ b/views/proses.html
@@ -300,14 +300,14 @@
           if (checkbox.checked) {
             sendCommand('9');
           } else {
-            sendCommand('A');
+            sendCommand('10');
           }
           break;
           case 'toggle_checkbox_7':
           if (checkbox.checked) {
-            sendCommand('B');
+            sendCommand('11');
           } else {
-            sendCommand('Cbacks');
+            sendCommand('12');
           }
           break;
          default:
