--- a/views/proses.html
+++ b/views/proses.html
@@ -189,7 +189,7 @@
     </div>
     <div class="container">
         <div class="box">
-            <img src="Images/Kamar 2.jpg" alt="Gambar 3">
+            <img src="public/Images/Kamar 2.jpg" alt="Gambar 3">
             <div class="overlay">
                 <input type="checkbox" id="toggle_checkbox_3">
                 <label for="toggle_checkbox_3">
