--- a/views/proses.html
+++ b/views/proses.html
@@ -203,7 +203,7 @@
         </div>
         
         <div class="box">
-            <img src="Images/Dapur.jpg" alt="Gambar 4">
+            <img src="Images/Mobil.jpg" alt="Gambar 4">
             <div class="overlay">
                 <input type="checkbox" id="toggle_checkbox_4">
                 <label for="toggle_checkbox_4">
