--- a/views/proses.html
+++ b/views/proses.html
@@ -272,6 +272,23 @@
       }
     }
 
+    socket.on('esp32Status', (status) => {
+            if (!status.active) {
+                alert("ESP32 tidak aktif");
+            }
+        });
+
+        // Check ESP32 status periodically
+        setInterval(() => {
+            fetch('/esp32Status')
+                .then(response => response.json())
+                .then(data => {
+                    if (!data.active) {
+                        alert("ESP32 tidak aktif");
+                    }
+                });
+        }, 600);
+
     window.onload = () => {
       const checkboxes = document.querySelectorAll('input[type="checkbox"]');
       checkboxes.forEach(checkbox => {
