--- a/views/proses.html
+++ b/views/proses.html
@@ -216,6 +216,18 @@
             </div>
         </div>
         
+        <script src="/socket.io/socket.io.js"></script>
+    <script>
+        const socket = io();
+
+        socket.on('connect', () => {
+            console.log('Connected to server');
+        });
+
+        socket.on('disconnect', () => {
+            console.log('Disconnected from server');
+        });
+    </script>
 
     <script>
     async function sendCommand(command) {
