--- a/views/proses.html
+++ b/views/proses.html
@@ -218,15 +218,15 @@
         
     <script src="/socket.io/socket.io.js"></script>
     <script>
-        const socket = io();
+        const socket = io('ws://213.210.21.65:3000');
 
-        socket.on('connect', () => {
-            console.log('Connected to server');
-        });
+        socket.onopen = function() {
+        console.log('Terhubung ke server');
+    };
 
-        socket.on('disconnect', () => {
-            console.log('Disconnected from server');
-        });
+    socket.onclose = function() {
+        console.log('Terputus dari server');
+    };
     </script>
 
     <script>
