--- a/views/proses.html
+++ b/views/proses.html
@@ -218,7 +218,7 @@
         
     <script src="/socket.io/socket.io.js"></script>
     <script>
-        const socket = io('ws://213.210.21.65:3000');
+        const socket = io();
 
         socket.onopen = function() {
         console.log('Terhubung ke server');
