--- a/views/coba.html
+++ b/views/coba.html
@@ -69,12 +69,13 @@
     <title>Control Lamp</title>
     <script>
         function sendCommand(command) {
+            const startTime = performance.now(); // Catat waktu ketika perintah dikirim
             fetch('http://213.210.21.65:3000/message', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
                 },
-                body: JSON.stringify({ message: command }),
+                body: JSON.stringify({ message: command, startTime: startTime }),
             })
             .then(response => {
                 if (!response.ok) {
@@ -118,6 +119,7 @@
     <input type="checkbox" id="toggle_checkbox_4" onchange="handleCheckboxChange(event)"> Lamp 4<br>
 </body>
 </html>
+
 
 
 
