--- a/views/coba.html
+++ b/views/coba.html
@@ -63,7 +63,7 @@
 </html> -->
 
 //                                    HTTP        
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <head>
     <title>Control Lamp</title>
@@ -117,6 +117,81 @@
     <input type="checkbox" id="toggle_checkbox_3" onchange="handleCheckboxChange(event)"> Lamp 3<br>
     <input type="checkbox" id="toggle_checkbox_4" onchange="handleCheckboxChange(event)"> Lamp 4<br>
 </body>
+</html> -->
+
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Control Lamp</title>
+    <script>
+        let timer;
+        let startTime;
+
+        function startTimer() {
+            startTime = Date.now();
+            timer = setInterval(() => {
+                document.getElementById('time').innerText = Date.now() - startTime + ' ms';
+            }, 10);
+        }
+
+        function stopTimer() {
+            clearInterval(timer);
+            const elapsedTime = Date.now() - startTime;
+            console.log('Elapsed time: ' + elapsedTime + ' ms');
+            return elapsedTime;
+        }
+
+        function sendCommand(command) {
+            fetch('http://213.210.21.65:3000/message', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+                body: JSON.stringify({ message: command }),
+            })
+            .then(response => {
+                if (!response.ok) {
+                    throw new Error('Network response was not ok');
+                }
+                console.log('Command sent:', command);
+            })
+            .catch(error => {
+                console.error('Error sending command:', error);
+            });
+        }
+
+        function handleCheckboxChange(event) {
+            const checkbox = event.target;
+            const checkboxId = checkbox.id;
+            startTimer();
+
+            switch (checkboxId) {
+                case 'toggle_checkbox_1':
+                    sendCommand(checkbox.checked ? '0' : '1');
+                    break;
+                case 'toggle_checkbox_2':
+                    sendCommand(checkbox.checked ? '2' : '3');
+                    break;
+                case 'toggle_checkbox_3':
+                    sendCommand(checkbox.checked ? '7' : '8');
+                    break;
+                case 'toggle_checkbox_4':
+                    sendCommand(checkbox.checked ? '5' : '6');
+                    break;
+                default:
+                    console.log('Unknown checkbox ID');
+            }
+        }
+    </script>
+</head>
+<body>
+    <h1>Control Lamp</h1>
+    <input type="checkbox" id="toggle_checkbox_1" onchange="handleCheckboxChange(event)"> Lamp 1<br>
+    <input type="checkbox" id="toggle_checkbox_2" onchange="handleCheckboxChange(event)"> Lamp 2<br>
+    <input type="checkbox" id="toggle_checkbox_3" onchange="handleCheckboxChange(event)"> Lamp 3<br>
+    <input type="checkbox" id="toggle_checkbox_4" onchange="handleCheckboxChange(event)"> Lamp 4<br>
+    <div>Time elapsed: <span id="time">0 ms</span></div>
+</body>
 </html>
 
 
@@ -127,6 +202,7 @@
 
 
 
+//===============================
 
 
 <!-- 
