--- a/views/coba.html
+++ b/views/coba.html
@@ -136,7 +136,7 @@
         function stopTimer() {
             clearInterval(timer);
             const elapsedTime = Date.now() - startTime;
-            console.log('Elapsed time: ' + elapsedTime + ' ms');
+            console.log('Elapsed time heheh: ' + elapsedTime + ' ms');
             return elapsedTime;
         }
 
