--- a/views/coba.html
+++ b/views/coba.html
@@ -152,7 +152,6 @@
 
         function stopTimer() {
             clearInterval(timerInterval);
-            document.getElementById('elapsed-time').innerText = ""; // Clear the elapsed time display
         }
 
         function updateElapsedTime() {
@@ -164,7 +163,7 @@
             fetch('/status')
             .then(response => response.json())
             .then(data => {
-                if (data.elapsedTime !== undefined) {
+                if (data.elapsedTime) {
                     document.getElementById('server-response').innerText = `Data received: ${data.message}, Elapsed time: ${data.elapsedTime} ms`;
                     stopTimer();
                 }
@@ -180,11 +179,10 @@
     <button onclick="sendMessage('2')">Matikan Lampu 1</button>
     <button onclick="sendMessage('3')">Nyalakan Lampu 2</button>
     <button onclick="sendMessage('4')">Matikan Lampu 2</button>
-    <p id="elapsed-time"></p>
-    <p id="server-response"></p>
+    <p id="elapsed-time">Elapsed time: 0 ms</p>
+    
 </body>
 </html>
-
 
 
 
