--- a/views/coba.html
+++ b/views/coba.html
@@ -118,7 +118,6 @@
     <input type="checkbox" id="toggle_checkbox_4" onchange="handleCheckboxChange(event)"> Lamp 4<br>
 </body>
 </html> -->
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -180,7 +179,7 @@
     <button onclick="sendMessage('3')">Nyalakan Lampu 2</button>
     <button onclick="sendMessage('4')">Matikan Lampu 2</button>
     <p id="elapsed-time">Elapsed time: 0 ms</p>
-    
+    <p id="server-response"></p>
 </body>
 </html>
 
@@ -195,7 +194,7 @@
 
 
 
-
+//===============================
 
 
 <!-- 
