--- a/views/coba.html
+++ b/views/coba.html
@@ -178,8 +178,8 @@
     <button onclick="sendMessage('2')">Matikan Lampu 1</button>
     <button onclick="sendMessage('3')">Nyalakan Lampu 2</button>
     <button onclick="sendMessage('4')">Matikan Lampu 2</button>
-    <p id="elapsed-time">Elapsed time: 0 ms</p>
-    <p id="server-response"></p>
+    <p id="elapsed-time">waktu lampu: 0 ms</p>
+    
 </body>
 </html>
 
