--- a/views/coba.html
+++ b/views/coba.html
@@ -155,7 +155,7 @@
 
         function updateElapsedTime() {
             const elapsedTime = Date.now() - startTime;
-            document.getElementById('elapsed-time').innerText = `Waktu lampu: ${elapsedTime} ms`;
+            document.getElementById('elapsed-time').innerText = `Elapsed time: ${elapsedTime} ms`;
         }
 
         function checkServerStatus() {
