--- a/views/coba.html
+++ b/views/coba.html
@@ -179,7 +179,7 @@
     <button onclick="sendMessage('3')">Nyalakan Lampu 2</button>
     <button onclick="sendMessage('4')">Matikan Lampu 2</button>
     <p id="elapsed-time">Elapsed time: 0 ms</p>
-    
+    <p id="server-response"></p>
 </body>
 </html>
 
