--- a/views/coba.html
+++ b/views/coba.html
@@ -62,7 +62,7 @@
 </body>
 </html> -->
 
-//                                    HTTP        
+//http
 <!-- <!DOCTYPE html>
 <html>
 <head>
@@ -195,7 +195,7 @@
 
 
 
-//===============================
+
 
 
 <!-- 
