--- a/views/coba.html
+++ b/views/coba.html
@@ -176,7 +176,7 @@
             fetch('/status')
             .then(response => response.json())
             .then(data => {
-                if (data.elapsedTime !== undefined) { // Periksa apakah elapsedTime tidak undefined
+                if (data.elapsedTime) {
                     document.getElementById('server-response').innerText = `Elapsed time: ${data.elapsedTime} ms`;
                     stopTimer();
                 }
@@ -196,6 +196,7 @@
     <p id="server-response"></p>
 </body>
 </html>
+
 
 
 
