--- a/views/coba.html
+++ b/views/coba.html
@@ -155,6 +155,9 @@
                 } else {
                     console.error('Failed to send message');
                 }
+            })
+            .catch(error => {
+                console.error('Error:', error);
             });
         }
 
@@ -180,6 +183,9 @@
                     document.getElementById('server-response').innerText = `Elapsed time: ${data.elapsedTime} ms`;
                     stopTimer();
                 }
+            })
+            .catch(error => {
+                console.error('Error:', error);
             });
         }
 
@@ -196,6 +202,7 @@
     <p id="server-response"></p>
 </body>
 </html>
+
 
 
 
