--- a/views/coba.html
+++ b/views/coba.html
@@ -110,7 +110,7 @@
             .then(response => response.json())
             .then(data => {
                 if (data.elapsedTime) {
-                    document.getElementById('server-response').innerText = `Elapsed time: ${data.elapsedTime} ms`;
+                    // document.getElementById('server-response').innerText = `Elapsed time: ${data.elapsedTime} ms`;
                     stopTimer();
                 }
             });
